--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -27,7 +27,9 @@
     background-clip: padding-box;
 }
 
-.balance { font-size: 2rem; }
+.balance {
+    font-size: 2.2rem;
+}
 
 .assets { font-size: 1rem; }
 
