--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -27,10 +27,6 @@
     background-clip: padding-box;
 }
 
-.balance {
-    font-size: 2.2rem;
-}
-
 .assets { font-size: 1rem; }
 
 .asset-balance {
@@ -150,7 +146,19 @@
 
 .small-icon > i { font-size: 1rem !important; }
 
-.currency-glyph { font-size: 1.5rem; }
+.balance {
+    font-size: 2.3rem;
+    background: linear-gradient(to right, rgb(30,87,153)  0%, rgb(15,46,83) 100%);
+    background-clip: text;
+	-webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.currency-glyph {
+    font-size: 1.5rem;
+    text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
+}
 
 .currency-iso { font-size: 0.75rem; }
 
