--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -46,6 +46,14 @@
     text-shadow: 0px 0px 5px rgb(15, 46, 83);
 }
 
+.hero-no-shadow {
+    text-align: center;
+    font-size: 2rem;
+    padding: 1rem;
+    margin-bottom: 2px;
+    position: relative;
+}
+
 .hero .title {
     font-size: 2.5rem;
     color: rgb(255, 199, 59);
