Use css tabular numbers for numeric displays.

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -381,6 +381,8 @@ span.red-badge {
 
 /* --------- misc --------- */
 
+.tabular-nums { font-variant-numeric: tabular-nums; }
+
 .cursor-pointer { cursor: pointer; }
 
 .outline {
