--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -1,5 +1,5 @@
 .account {
-    margin: 20px 0px;
+    margin-bottom: 20px;
     color: rgb(15,46,83) !important;
     background-color: rgb(244,176,4) !important;
     -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
@@ -16,7 +16,7 @@
 }
 
 .welcome-card {
-    margin: 0px;
+    margin-bottom: 20px;
     color: rgb(244,176,4) !important;
     background-color: #2e5077 !important;
     -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
@@ -73,7 +73,7 @@
     padding: 0 0.7rem;
     display: block;
     position: relative;
-    margin: 20px;
+    margin-bottom: 20px;
     color: rgb(15,46,83) !important;
     background-color: #eceff1 !important;
     -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
