--- a/src/components/StellarFox/index.css
+++ b/src/components/StellarFox/index.css
@@ -124,3 +124,21 @@ a:focus {
 .em {
     font-weight: 600;
 }
+
+/* Change Autocomplete styles in Chrome */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    border: none;
+    -webkit-text-fill-color: rgb(244, 176, 4);
+    -webkit-box-shadow: 0 0 0 0 rgb(15, 46, 83) inset;
+    box-shadow: 0 0 0 0 rgb(15, 46, 83) inset;
+    transition: background-color 5000s ease-in-out 0s;
+}
