--- a/src/components/Account/index.css
+++ b/src/components/Account/index.css
@@ -31,22 +31,27 @@
     font-weight: 400;
 }
 
-.bg-green {
+.badge {
     display: inline-block;
-    background-color: rgba(34, 139, 34, 0.55);
-    color: rgba(255, 255, 255, 0.75);
-    font-size: 0.8rem;
-    line-height: 1rem;
+    font-size: 1rem;
+    line-height: 1.2rem;
     padding: 2px 6px;
-    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
-    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
     -webkit-background-clip: padding-box;
     -moz-background-clip: padding-box;
     background-clip: padding-box;
     border-radius: 3px;
     font-weight: bold;
     margin: 5px 0px;
+}
+
+.badge-secondary {
+    background-color: rgb(244, 176, 4);
+    color: rgb(46, 80, 119);
+}
+
+.badge-primary-light {
+    background-color: rgb(46, 80, 119);
+    color: rgb(244, 176, 4);
 }
 
 .tag-success {
