--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -46,6 +46,24 @@
     text-shadow: 0px 0px 5px rgb(15, 46, 83);
 }
 
+.hero-large {
+    padding: 5rem;
+}
+
+.hero-mobile {
+    padding: 1.2rem;
+}
+
+.mission {
+    font-size: 2rem;
+    line-height: 2.5rem;
+}
+
+.mission-mobile {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+}
+
 .hero-no-shadow {
     text-align: center;
     font-size: 2rem;
