--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -114,9 +114,15 @@ div.p-b-small-block::after {
 
 .bigger { font-size: 1.3rem !important; }
 
-.text-large { font-size: 1.5rem; }
+.text-4 {
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+}
 
-.text-normal { font-size: 1rem !important; }
+.text-3 {
+    font-size: 1.3rem;
+    line-height: 1.6rem;
+}
 
 /* --------- fonts / sizes --------- */
 
