--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -47,11 +47,11 @@
 }
 
 .hero-large {
-    padding: 5rem;
+    padding: 5rem 20rem;
 }
 
 .hero-mobile {
-    padding: 1.2rem;
+    padding: 1.5rem 1.2rem;
 }
 
 .mission {
