--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -20,6 +20,8 @@ div.p-b-small-block::after {
 
 .p-b-large { padding-bottom: 3rem; }
 
+.p-b-x-large { padding-bottom: 5rem; }
+
 .p-t { padding-top: 1rem; }
 
 .p-t-nano { padding-top: 2px; }
@@ -29,6 +31,8 @@ div.p-b-small-block::after {
 .p-t-medium { padding-top: 2rem; }
 
 .p-t-large { padding-top: 3rem; }
+
+.p-t-x-large { padding-top: 5rem; }
 
 .p-l { padding-left: 1rem; }
 
@@ -43,6 +47,8 @@ div.p-b-small-block::after {
 .p-r-small { padding-right: 0.5rem; }
 
 .p-r-tiny { padding-right: 0.3em; }
+
+.p-r-large { padding-right: 3rem; }
 
 .m-t { margin-top: 1rem; }
 
