Add payer header to PaymentCard.

--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -206,3 +206,10 @@
 .custom-memo {
     margin-top: 10px;
 }
+
+.sender-heading {
+    font-size: 12px;
+    color: rgb(15,46,83);
+    opacity: 0.3;
+    margin-left: 10px;
+}
