--- a/src/components/LoadingModal/index.css
+++ b/src/components/LoadingModal/index.css
@@ -1,7 +1,7 @@
 .loading-modal-background {
     position: fixed;
     opacity: 0.7;
-    background-color: rgb(15,46,83);
+    background-color: rgb(46, 80, 119);
     display: block;
     width: 100%;
     height: 100%;
@@ -18,25 +18,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: rgb(15,46,83);
     z-index: 10000;
     width: 300px;
-    height: 200px;
     position: fixed;
     margin: 0 auto;
-    top: 25%;
+    top:calc(50% - 100px);
+    top:-webkit-calc(50% - 100px);
+    top:-moz-calc(50% - 100px);
     left:-webkit-calc(50% - 150px);
     left:-moz-calc(50% - 150px);
     left:calc(50% - 150px);
-    border: 1px solid rgba(244,176,4,0.6);
-    border-radius: 3px;
-    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding-box;
-    background-clip: padding-box;
-    padding-bottom: 5px;
 }
 
 .loading-modal-header {
