--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -213,3 +213,16 @@
     opacity: 0.3;
     margin-left: 10px;
 }
+
+.ledger-display {
+    margin-right: 25%;
+    margin-left: 25%;
+}
+
+.ledger-display-item {
+    margin: 2px 0px;
+    border: 1px solid rgba(15,46,83,0.3);
+    border-radius: 2px;
+    padding: 1px 5px;
+    color: rgba(15,46,83,0.8);
+}
