--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -533,3 +533,14 @@ span.red-badge {
 .color-primary {
     color: rgba(15, 46, 83, 0.95);
 }
+
+
+.swipeable-tab-container {
+    margin: 40px 60px 0px 60px;
+}
+
+.status-message-area {
+    margin: 1rem 2rem;
+    min-height: 3rem;
+    max-height: 3rem;
+}
