Add display for other assets with AssetGrid and Asset components.

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -70,6 +70,8 @@ div.p-b-small-block::after {
 
 .m-l-small { margin-left: 3px; }
 
+.m-l { margin-left: 1rem; }
+
 /* --------- paddings / margins --------- */
 
 
