--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -157,6 +157,14 @@
     text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
+.balance-text {
+    background: linear-gradient(to right, rgb(30,87,153)  0%, rgb(15,46,83) 100%);
+    background-clip: text;
+	-webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
 .currency-glyph {
     font-size: 1.5rem;
     text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
