Adjust asset background display and styling.

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -132,6 +132,10 @@ div.p-b-small-block::after {
     line-height: 1.6rem;
 }
 
+.asset-code {
+    font-size: 1rem;
+}
+
 /* --------- fonts / sizes --------- */
 
 
