--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -162,6 +162,7 @@
 	-webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
+    /* text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .currency-glyph {
