Reposition Balances content items.

--- a/src/components/StellarFox/index.css
+++ b/src/components/StellarFox/index.css
@@ -157,5 +157,8 @@ select:-webkit-autofill:focus {
 }
 
 .chart-coin-history {
-    opacity: 0.85;
+    opacity: 0.55;
+    /* position: absolute; */
+    /* right: 0; */
+    /* z-index: 0; */
 }
